@@ -1,25 +1,68 @@
+@file:Suppress("VulnerableLibrariesLocal")
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 import org.jetbrains.changelog.Changelog
 import org.jetbrains.changelog.markdownToHTML
+
+import com.github.benmanes.gradle.versions.reporter.PlainTextReporter
+import com.github.benmanes.gradle.versions.reporter.result.Result
+import com.github.benmanes.gradle.versions.updates.DependencyUpdatesTask
+import com.palantir.gradle.gitversion.VersionDetails
+import groovy.lang.Closure
+import org.apache.commons.io.FileUtils
+import org.w3c.dom.Document
+import java.io.BufferedReader
+import java.io.ByteArrayInputStream
+import java.io.InputStreamReader
+import java.net.HttpURLConnection
+import java.net.URL
+import java.nio.file.Files
+import javax.xml.parsers.DocumentBuilderFactory
+import javax.xml.xpath.XPathConstants
+import javax.xml.xpath.XPathFactory
+
 
 
 fun properties(key: String) = providers.gradleProperty(key)
 fun environment(key: String) = providers.environmentVariable(key)
 fun project(key: String) = project.findProperty(key).toString()
 
+// Import variables from gradle.properties file
+val pluginDownloadIdeaSources: String by project
+val pluginVersion: String by project
+val pluginJavaVersion: String by project
+val pluginEnableDebugLogs: String by project
+val pluginClearSandboxedIDESystemLogsBeforeRun: String by project
+val pluginIdeaVersion = detectBestIdeVersion()
+
 plugins {
     id("java") // Java support
     id("groovy")
     id("org.jetbrains.kotlin.jvm") version "1.9.10"     // Kotlin support
-    id("org.jetbrains.intellij") version "1.16.0"    // Gradle IntelliJ Plugin
+    id("org.jetbrains.intellij") version "1.16.1"    // Gradle IntelliJ Plugin
     id("org.jetbrains.changelog") version "2.2.0"    // Gradle Changelog Plugin "com.intellij.clion"
     id("org.jetbrains.qodana") version "0.1.13"    // Gradle Qodana Plugin
     id("org.jetbrains.kotlinx.kover") version "0.6.1"    // Gradle Kover Plugin
     kotlin("plugin.serialization") version "1.9.10"
+    id("com.github.ben-manes.versions") version "0.50.0" // https://github.com/ben-manes/gradle-versions-plugin
+    id("com.palantir.git-version") version "3.0.0" // https://github.com/palantir/gradle-git-version
+    id("com.github.andygoossens.modernizer") version "1.9.0" // https://github.com/andygoossens/gradle-modernizer-plugin
+    id("biz.lermitage.oga") version "1.1.1" // https://github.com/bg-omar/oga-gradle-plugin
+
 }
 
 group = project("pluginGroup")
 version = project("pluginVersion")
+logger.quiet("Will use IDEA $pluginIdeaVersion and Java $pluginJavaVersion. Plugin version set to $version")
+
+group = "com.github.bgomar.bgdevtoys"
+
+repositories {
+    mavenCentral()
+}
+
+val junitVersion = "5.10.1"
+val junitPlatformLauncher = "0.0.1"
+
 
 val service = project.extensions.getByType<JavaToolchainService>()
 val customLauncher = service.launcherFor {
@@ -38,6 +81,24 @@ repositories {
 dependencies {
     implementation("org.jetbrains:marketplace-zip-signer:0.1.8")
     implementation("org.jetbrains:annotations:24.0.1")
+    implementation("org.apache.commons:commons-lang3:3.14.0") // because no longer bundled with IDE
+
+    implementation("commons-codec:commons-codec:1.16.0") // for Hash
+    implementation("com.thedeanda:lorem:2.2") // for Lorem Ipsum
+    implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.16.1") // for JSON <> YAML
+    implementation("com.dampcake:bencode:1.4.1") // for JSON <> BENCODE
+    implementation("com.cronutils:cron-utils:9.2.1") // for cron expression parser https://github.com/jmrozanec/cron-utils
+    implementation("net.datafaker:datafaker:2.0.2") // for Data Faker
+    implementation("org.yaml:snakeyaml:2.2") // for JSON <> YAML
+    implementation("org.apache.commons:commons-text:1.11.0") // for JSON (un)escape
+    implementation("com.nulab-inc:zxcvbn:1.8.2") // for password strength evaluation
+    implementation("fr.marcwrobel:jbanking:4.2.0") // for IBAN generation
+    implementation("at.favre.lib:bcrypt:0.10.2") // for Bcrypt hash
+
+    testImplementation("org.junit.jupiter:junit-jupiter-api:$junitVersion")
+    testImplementation("org.junit.jupiter:junit-jupiter-params:$junitVersion")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:$junitVersion")
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher:$junitPlatformLauncher")
 }
 
 // Configure Gradle IntelliJ Plugin
@@ -51,12 +112,27 @@ intellij {
     updateSinceUntilBuild.set(true)
     plugins.set(listOf("JavaScript", "com.intellij.java", "com.intellij.database"))
     sandboxDir.set(project.rootDir.canonicalPath + "/.sandbox")
+    downloadSources.set(pluginDownloadIdeaSources.toBoolean() && !System.getenv().containsKey("CI"))
+    instrumentCode.set(true)
+    pluginName.set("BG-DevToys")
+    sandboxDir.set("${rootProject.projectDir}/.idea-sandbox/${shortenIdeVersion(pluginIdeaVersion)}")
+    updateSinceUntilBuild.set(false)
+    version.set(pluginIdeaVersion)
 }
 // Configure Gradle Changelog Plugin - read more: https://github.com/JetBrains/gradle-changelog-plugin
 changelog {
     groups.set(emptyList())
     repositoryUrl.set(project("pluginRepositoryUrl"))
+    headerParserRegex.set("(.*)".toRegex())
+    itemPrefix.set("*")
 }
+
+modernizer {
+    includeTestClasses = true
+    // Find exclusion names at https://github.com/gaul/modernizer-maven-plugin/blob/master/modernizer-maven-plugin/src/main/resources/modernizer.xml
+    exclusions = setOf("java/util/Optional.get:()Ljava/lang/Object;")
+}
+
 
 // Configure Gradle Qodana Plugin - read more: https://github.com/JetBrains/gradle-qodana-plugin
 qodana {
@@ -86,16 +162,82 @@ kover.xmlReport {
 }
 
 tasks {
+    register("clearSandboxedIDESystemLogs") {
+        doFirst {
+            if (pluginClearSandboxedIDESystemLogsBeforeRun.toBoolean()) {
+                val sandboxLogDir = File("${rootProject.projectDir}/.idea-sandbox/${shortenIdeVersion(pluginIdeaVersion)}/system/log/")
+                if (sandboxLogDir.exists() && sandboxLogDir.isDirectory) {
+                    FileUtils.deleteDirectory(sandboxLogDir)
+                    logger.quiet("Deleted sandboxed IDE's log folder $sandboxLogDir")
+                }
+            }
+        }
+    }
     // Set the JVM compatibility versions
     withType<JavaCompile> {
         sourceCompatibility = project("sourceCompatibility")
         targetCompatibility = project("targetCompatibility")
+        sourceCompatibility = pluginJavaVersion
+        targetCompatibility = pluginJavaVersion
+        options.compilerArgs = listOf("-Xlint:deprecation")
+        options.encoding = "UTF-8"
     }
     withType<org.jetbrains.kotlin.gradle.tasks.UsesKotlinJavaToolchain>().configureEach {
         kotlinJavaToolchain.toolchain.use(customLauncher)
     }
     withType<KotlinCompile> {
         kotlinOptions.jvmTarget = project("sourceCompatibility")
+    }
+    withType<Test> {
+        useJUnitPlatform()
+
+        // avoid JBUIScale "Must be precomputed" error, because IDE is not started (LoadingState.APP_STARTED.isOccurred is false)
+        jvmArgs("-Djava.awt.headless=true")
+    }
+    withType<Test> {
+        useJUnitPlatform()
+
+        // avoid JBUIScale "Must be precomputed" error, because IDE is not started (LoadingState.APP_STARTED.isOccurred is false)
+        jvmArgs("-Djava.awt.headless=true")
+    }
+    withType<DependencyUpdatesTask> {
+        checkForGradleUpdate = true
+        gradleReleaseChannel = "current"
+        revision = "release"
+        rejectVersionIf {
+            isNonStable(candidate.version)
+        }
+        outputFormatter = closureOf<Result> {
+            unresolved.dependencies.removeIf {
+                val coordinates = "${it.group}:${it.name}"
+                coordinates.startsWith("unzipped.com") || coordinates.startsWith("com.jetbrains:ideaI")
+            }
+            PlainTextReporter(project, revision, gradleReleaseChannel)
+                .write(System.out, this)
+        }
+    }
+    runIde {
+        dependsOn("clearSandboxedIDESystemLogs")
+
+        maxHeapSize = "1g" // https://docs.gradle.org/current/dsl/org.gradle.api.tasks.JavaExec.html
+
+        // force detection of slow operations in EDT when playing with sandboxed IDE (SlowOperations.assertSlowOperationsAreAllowed)
+        jvmArgs("-Dide.slow.operations.assertion=true")
+
+        if (pluginEnableDebugLogs.toBoolean()) {
+            systemProperties(
+                "idea.log.debug.categories" to "#com.github.bgomar.bgdevtoys"
+            )
+        }
+
+        autoReloadPlugins.set(false)
+
+        // If any warning or error with missing --add-opens, wait for the next gradle-intellij-plugin's update that should sync
+        // with https://raw.githubusercontent.com/JetBrains/intellij-community/master/plugins/devkit/devkit-core/src/run/OpenedPackages.txt
+        // or do it manually
+    }
+    buildSearchableOptions {
+        enabled = false
     }
     wrapper {
         gradleVersion = project("gradleVersion")
@@ -167,4 +309,112 @@ tasks {
             """
         )
     }
+}
+
+
+fun isNonStable(version: String): Boolean {
+    if (listOf("RELEASE", "FINAL", "GA").any { version.uppercase().endsWith(it) }) {
+        return false
+    }
+    return listOf("alpha", "Alpha", "ALPHA", "b", "beta", "Beta", "BETA", "rc", "RC", "M", "EA", "pr", "atlassian").any {
+        "(?i).*[.-]${it}[.\\d-]*$".toRegex().matches(version)
+    }
+}
+
+/** Return an IDE version string without the optional PATCH number.
+ * In other words, replace IDE-MAJOR-MINOR(-PATCH) by IDE-MAJOR-MINOR. */
+fun shortenIdeVersion(version: String): String {
+    if (version.contains("SNAPSHOT", ignoreCase = true)) {
+        return version
+    }
+    val matcher = Regex("[A-Za-z]+[\\-]?[0-9]+[\\.]{1}[0-9]+")
+    return try {
+        matcher.findAll(version).map { it.value }.toList()[0]
+    } catch (e: Exception) {
+        logger.warn("Failed to shorten IDE version $version: ${e.message}")
+        version
+    }
+}
+
+/** Find latest IntelliJ stable version from JetBrains website. Result is cached locally for 24h. */
+fun findLatestStableIdeVersion(): String {
+    val t1 = System.currentTimeMillis()
+    val definitionsUrl = URL("https://www.jetbrains.com/updates/updates.xml")
+    val cachedLatestVersionFile = File(System.getProperty("java.io.tmpdir") + "/jle-ij-latest-version.txt")
+    var latestVersion: String
+    try {
+        if (cachedLatestVersionFile.exists()) {
+
+            val cacheDurationMs = Integer.parseInt(project.findProperty("pluginIdeaVersionCacheDurationInHours") as String) * 60 * 60_000
+            if (cachedLatestVersionFile.exists() && cachedLatestVersionFile.lastModified() < (System.currentTimeMillis() - cacheDurationMs)) {
+                logger.quiet("Cache expired, find latest stable IDE version from $definitionsUrl then update cached file $cachedLatestVersionFile")
+                latestVersion = getOnlineLatestStableIdeVersion(definitionsUrl)
+                cachedLatestVersionFile.delete()
+                Files.writeString(cachedLatestVersionFile.toPath(), latestVersion, Charsets.UTF_8)
+
+            } else {
+                logger.quiet("Find latest stable IDE version from cached file $cachedLatestVersionFile")
+                latestVersion = Files.readString(cachedLatestVersionFile.toPath())!!
+            }
+
+        } else {
+            logger.quiet("Find latest stable IDE version from $definitionsUrl")
+            latestVersion = getOnlineLatestStableIdeVersion(definitionsUrl)
+            Files.writeString(cachedLatestVersionFile.toPath(), latestVersion, Charsets.UTF_8)
+        }
+
+    } catch (e: Exception) {
+        if (cachedLatestVersionFile.exists()) {
+            logger.warn("Error: ${e.message}. Will find latest stable IDE version from cached file $cachedLatestVersionFile")
+            latestVersion = Files.readString(cachedLatestVersionFile.toPath())!!
+        } else {
+            throw RuntimeException(e)
+        }
+    }
+    if (logger.isDebugEnabled) {
+        val t2 = System.currentTimeMillis()
+        logger.debug("Operation took ${t2 - t1} ms")
+    }
+    return latestVersion
+}
+
+/** Find latest IntelliJ stable version from given url. */
+fun getOnlineLatestStableIdeVersion(definitionsUrl: URL): String {
+    val definitionsStr = readRemoteContent(definitionsUrl)
+    val builderFactory = DocumentBuilderFactory.newInstance()
+    val builder = builderFactory.newDocumentBuilder()
+    val xmlDocument: Document = builder.parse(ByteArrayInputStream(definitionsStr.toByteArray()))
+    val xPath = XPathFactory.newInstance().newXPath()
+    val expression = "/products/product[@name='IntelliJ IDEA']/channel[@id='IC-IU-RELEASE-licensing-RELEASE']/build[1]/@version"
+    return xPath.compile(expression).evaluate(xmlDocument, XPathConstants.STRING) as String
+}
+
+/** Read a remote file as String. */
+fun readRemoteContent(url: URL): String {
+    val t1 = System.currentTimeMillis()
+    val content = StringBuilder()
+    val conn = url.openConnection() as HttpURLConnection
+    conn.requestMethod = "GET"
+    BufferedReader(InputStreamReader(conn.inputStream)).use { rd ->
+        var line: String? = rd.readLine()
+        while (line != null) {
+            content.append(line)
+            line = rd.readLine()
+        }
+    }
+    val t2 = System.currentTimeMillis()
+    logger.quiet("Download $url, took ${t2 - t1} ms (${content.length} B)")
+    return content.toString()
+}
+
+/** Get IDE version from gradle.properties or, of wanted, find latest stable IDE version from JetBrains website. */
+fun detectBestIdeVersion(): String {
+    val pluginIdeaVersionFromProps = project.findProperty("pluginIdeaVersion")
+    if (pluginIdeaVersionFromProps.toString() == "IC-LATEST-STABLE") {
+        return "IC-${findLatestStableIdeVersion()}"
+    }
+    if (pluginIdeaVersionFromProps.toString() == "IU-LATEST-STABLE") {
+        return "IU-${findLatestStableIdeVersion()}"
+    }
+    return pluginIdeaVersionFromProps.toString()
 }
